# firebase-auth

./: cabal.project  flake.nix
firebase-auth-jwt/: firebase-auth-jwt.cabal
firebase-auth-jwt/src/FirebaseAuth/: JWT.hs
firebase-auth-jwt/src/FirebaseAuth/JWT/: Internal.hs
firebase-auth-servant/: firebase-auth-servant.cabal
firebase-auth-servant-docs/: firebase-auth-servant-docs.cabal
firebase-auth-servant-docs/src/FirebaseAuth/Servant/: Docs.hs
firebase-auth-servant/src/FirebaseAuth/: Servant.hs
