cabal-version:      3.0
name:               firebase-auth-jwt
version:            0.2.0.0
synopsis:           JWT part of Firebase Authentication

description:        JWT part for Firebase Authentication.
homepage:           https://github.com/thomasbach-dev/firebase-auth

bug-reports:        https://github.com/thomasbach-dev/firebase-auth/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
category:           Authentication, Web

common common-options
    default-extensions: DeriveGeneric
                      , FlexibleContexts
                      , FlexibleInstances
                      , MultiParamTypeClasses
                      , OverloadedStrings

    build-depends:    base
                      -- Due to jose-0.8.*
                    , aeson ^>= {1.4, 1.5}
                    , containers
                    , http-conduit
                    , jose
                    , lens
                    , mtl
                    , stm
                    , text
                    , time
                        
    default-language: Haskell2010

    ghc-options:      -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

library
    import:           common-options
    hs-source-dirs:   src

    exposed-modules:  FirebaseAuth.JWT
                    , FirebaseAuth.JWT.Internal


test-suite spec
    import:           common-options
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs

    build-depends:    firebase-auth-jwt
                    , hspec
