cabal-version:      3.0
name:               firebase-auth-servant-docs
version:            0.3.0.0
synopsis:           Docs instances for Firebase Authentication

homepage:           https://github.com/thomasbach-dev/firebase-auth

bug-reports:        https://github.com/thomasbach-dev/firebase-auth/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
category:           Authentication, Servant, Web

library
    exposed-modules:  FirebaseAuth.Servant.Docs

    default-extensions: FlexibleInstances
                      , ScopedTypeVariables
                      , TypeApplications
                      , TypeOperators

    build-depends:    base
                    , firebase-auth-servant
                    , lens
                    , servant-docs
                    , servant-server
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Wcpp-undef
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
