cabal-version:      3.0
name:               firebase-auth-servant
version:            0.2.0.0
synopsis:           Firebase Authentication for Servant

description:        Firebase Authentication for Servant APIs.
homepage:           https://github.com/thomasbach-dev/firebase-auth

bug-reports:        https://github.com/thomasbach-dev/firebase-auth/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
category:           Authentication, Servant, Web

common common-options
    default-extensions: DataKinds
                      , FlexibleContexts
                      , OverloadedStrings
                      , ScopedTypeVariables
                      , TypeFamilies

    build-depends:    base
                    , aeson
                    , bytestring
                    , firebase-auth-jwt
                    , lens
                    , memory
                    , mtl
                    , jose
                    , servant
                    , servant-server
                    , text
                    , unordered-containers
                    , wai
                    , witch

    ghc-options:      -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

library
    import:           common-options
    hs-source-dirs:   src

    exposed-modules:  FirebaseAuth.Servant


test-suite spec
    import:           common-options
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs

    build-depends:    firebase-auth-servant
                    , hspec
